Added files via upload

--- a/Morelli_Presentation.ipynb
+++ b/Morelli_Presentation.ipynb
@@ -386,12 +386,12 @@
    "source": [
     "* From FOC, we get the Euler equation:\n",
     "\\begin{equation}\n",
-    "u'_{t}=\\delta E_{t}[u'_{t+1}(\\gamma+\\epsilon_{t+1}f'_{t})]\n",
+    "u_{t}'=\\delta E_{t}\\left[u_{t+1}'\\left(\\gamma+\\epsilon_{t+1}f_{t}'\\right)\\right]\n",
     "\\end{equation}\n",
     "* Certainty Equivalent Steady State ($\\epsilon=1$):\n",
-    "    * $u'(s^{*}-x^{*})=\\delta\\lambda^{*}[\\gamma+f'(x^{*})]$\n",
-    "    * $\\lambda^{*}=u'(s^{*}-x^{*})$\n",
-    "    * $s^{*}=\\gamma x^{*}+f(x^{*})$\n",
+    "    * $u'\\left(s^{*}-x^{*}\\right)=\\delta\\lambda^{*}\\left[\\gamma+f'\\left(x^{*}\\right)\\right]$\n",
+    "    * $\\lambda^{*}=u'\\left(s^{*}-x^{*}\\right)$\n",
+    "    * $s^{*}=\\gamma x^{*}+f\\left(x^{*}\\right)$\n",
     "    \n",
     "    \n",
     "* CE SS conditions imply the golden rule $1-\\gamma+r=f'(x^{*})$ where $\\delta=1/(1+r)$"
