Added files via upload

--- a/Morelli_Presentation.ipynb
+++ b/Morelli_Presentation.ipynb
@@ -371,7 +371,7 @@
     "\\end{equation}\n",
     "* Bellman Equation:\n",
     "\\begin{equation}\n",
-    "V\\left(\\left[x,\\epsilon\\right]\\right)=\\left\\{u\\left(g\\left(x,\\epsilon\\right)-x'\\right)+\\delta E_{\\epsilon'}V\\left(\\left[x',\\epsilon'\\right]\\right)\\right\\}\n",
+    "V=\\max_{0\\leq x'\\leq s=g\\left(x,\\epsilon\\right)}\\left\\{u\\left(g\\left(x,\\epsilon\\right)-x'\\right)+\\delta E_{\\epsilon'}V\\left(\\left[x',\\epsilon'\\right]\\right)\\right\\}\n",
     "\\end{equation}\n",
     "* Assume $u'(0)=-\\infty$ and $h(0)=0$"
    ]
