Added files via upload

--- a/Morelli_Presentation.ipynb
+++ b/Morelli_Presentation.ipynb
@@ -365,15 +365,7 @@
     "* Infinite horizon. Continuous state and action.\n",
     "* At the begining of period $t$ it has $s\\in(0,\\infty)$ units, of which invests $x\\in[0,s)$.\n",
     "* State transition function: $s=g(s,x,\\epsilon)=\\gamma x+\\epsilon f(x)$.\n",
-    "* Rewards function:\n",
-    "\\begin{equation}\n",
-    "F(s,x)=u(s-x)=\\frac{(s-x)^{1-\\alpha}}{1-\\alpha}\n",
-    "\\end{equation}\n",
-    "* Bellman Equation:\n",
-    "\\begin{equation}\n",
-    "V=\\max_{0\\leq x'\\leq s=g\\left(x,\\epsilon\\right)}\\left\\{u\\left(g\\left(x,\\epsilon\\right)-x'\\right)+\\delta E_{\\epsilon'}V\\left(\\left[x',\\epsilon'\\right]\\right)\\right\\}\n",
-    "\\end{equation}\n",
-    "* Assume $u'(0)=-\\infty$ and $h(0)=0$"
+    "* Rewards function:\n"
    ]
   },
   {
